--- a/imageio-extensions/pom.xml
+++ b/imageio-extensions/pom.xml
@@ -1,246 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>9</version>
-    </parent>
-    <groupId>com.terrygilliam</groupId>
-    <artifactId>terrygilliam</artifactId>
-    <version>3.5-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <name>Twelvemonkeys</name>
 
-    <licenses>
-        <license>
-            <name>The BSD License</name>
-            <url>https://github.com/haraldk/terrygilliam#license</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
+    <groupId>com.develeap</groupId>
+    <artifactId>thumbnailer</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-    <modules>
-        <module>common</module>
-        <module>imageio</module>
-    </modules>
-
-    <distributionManagement>
-        <repository>
-            <id>central</id>
-            <name>artifactory-releases</name>
-            <url>http://artifactory:8081/artifactory/libs-release-local</url>
-        </repository>
-        <snapshotRepository>
-            <id>snapshots</id>
-            <name>artifactory-snapshots</name>
-            <url>http://artifactory:8081/artifactory/libs-snapshot-local</url>
-        </snapshotRepository>
-    </distributionManagement>
-
-      <developers>
-        <developer>
-            <id>harald.kuhr</id>
-            <name>Harald Kuhr</name>
-            <email>harald.kuhr@gmail.com</email>
-            <organization>Twelvemonkeys</organization>
-            <roles>
-                <role>project-owner</role>
-                <role>developer</role>
-            </roles>
-        </developer>
-    </developers>
-
-    <contributors>
-        <contributor>
-            <name>Erlend Hamnaberg</name>
-            <email>erlend@hamnaberg.net</email>
-            <roles>
-                <role>maven-guru</role>
-            </roles>
-        </contributor>
-        <contributor>
-            <name>Oliver Schmidtmer</name>
-            <email>mail@trek7891.de</email>
-            <roles>
-                <role>contributor</role>
-            </roles>
-        </contributor>
-        <contributor>
-            <name>Jason Palmer</name>
-            <email>jpalmer@itemmaster.com</email>
-            <roles>
-                <role>contributor</role>
-            </roles>
-        </contributor>
-        <contributor>
-            <name>Hermann Kroll</name>
-            <email>dev.hkroll@gmail.com</email>
-            <roles>
-                <role>contributor</role>
-            </roles>
-        </contributor>
-    </contributors>
-
-    <issueManagement>
-        <system>GitHub</system>
-        <url>https://github.com/haraldk/terrygilliam/issues</url>
-    </issueManagement>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+            <version>3.9.6</version>
+        </dependency>
+        <!--
+        <dependency>
+            <groupId>com.terrygilliam.imageio</groupId>
+            <artifactId>imageio-tiff</artifactId>
+            <version>3.5</version>
+        </dependency>
+        -->
+    </dependencies>
 
     <build>
-        <finalName>terrygilliam-${project.artifactId}-${project.version}</finalName>
+        <finalName>${project.artifactId}</finalName>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifestEntries>
-                            <Implementation-Title>terrygilliam-${project.artifactId}</Implementation-Title>
-                            <Implementation-Vendor>terrygilliam</Implementation-Vendor>
-                            <Implementation-Version>${project.version}</Implementation-Version>
-                            <Implementation-URL>${project.scm.url}</Implementation-URL>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <inherited>true</inherited>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.1.1</version>
                 <executions>
-                     <execution>
-                         <phase>package</phase>
-                         <id>attach-sources</id>
-                         <goals>
-                             <goal>jar</goal>
-                             <goal>test-jar</goal>
-                         </goals>
-                     </execution>
-                 </executions>
-             </plugin>
-        </plugins>
-
-        <pluginManagement>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>false</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+<!-- /// -->
             <plugins>
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>2.7</version>
-                    <configuration>
-                        <encoding>UTF-8</encoding>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>2.6</version>
-                    <inherited>true</inherited>
+                    <groupId>com.spotify</groupId>
+                    <artifactId>dockerfile-maven-plugin</artifactId>
+                    <version>1.4.13</version>
                     <executions>
-                        <execution>
-                            <phase>package</phase>
-                            <id>attach-tests</id>
-                            <goals>
-                                <goal>test-jar</goal>
-                            </goals>
-                        </execution>
+                    <execution>
+                        <id>default</id>
+                        <goals>
+                        <goal>build</goal>
+                        <goal>push</goal>
+                        </goals>
+                    </execution>
                     </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.10.3</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-source-plugin</artifactId>
-                    <version>2.4</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.3</version>
-                    <inherited>true</inherited>
                     <configuration>
-                        <source>1.7</source>
-                        <target>1.7</target>
-                        <showDeprecation>false</showDeprecation>
-                        <debuglevel>source,lines</debuglevel>
-                        <compilerArguments>
-                            <encoding>iso-8859-1</encoding>
-                        </compilerArguments>
+                    <repository>${project.artifactId}</repository>
+                    <buildArgs>
+                        <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+                    </buildArgs>
                     </configuration>
                 </plugin>
-
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.1</version>
-                    <configuration>
-                        <useSystemClassLoader>false</useSystemClassLoader>
-                        <systemProperties>
-                            <property>
-                                <name>java.awt.headless</name>
-                                <value>true</value>
-                            </property>
-                        </systemProperties>
-                    </configuration>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-release-plugin</artifactId>
-                    <version>2.5.2</version>
-                    <dependencies>
-                      <dependency>
-                        <groupId>org.apache.maven.scm</groupId>
-                        <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>1.9</version>
-                      </dependency>
-                    </dependencies>
-                </plugin>
-            </plugins>
-
-        </pluginManagement>
-
+                </plugins>
+<!-- /// -->
+        </plugins>
     </build>
 
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.3</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.18.1</version>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.7</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.4</version>
-                <configuration>
-                    <targetJdk>1.7</targetJdk>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.15</version>
-            </plugin>
-        </plugins>
-    </reporting>
 
 </project>
